--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="tip_reinstall">权限被拒绝，请删除应用再安装</string>
     <string name="tip_isnot_dir">你输入的路径不是文件夹</string>
     <string name="action_search">搜索</string>
+    <string name="action_choose_folder">选择目录</string>
+    <string name="search_result">搜索结果</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
